<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_ws"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.tutorialandroid.splashscreen.MainWS"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Login"
            android:layout_marginTop="10dp"
            android:id="@+id/texto"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Buscar"
            android:id="@+id/buscar"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DELETAR"
            android:id="@+id/deletar"/>

    <TextView
        android:id="@+id/nome"
        android:text="Nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/perfil"
        android:text="Perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/email"
        android:text="Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/senha"
        android:text="Senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="Login"
            android:layout_marginTop="10dp"
            android:id="@+id/nome_alt"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="Perfil"
            android:layout_marginTop="10dp"
            android:id="@+id/perfil_alt"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:layout_marginTop="10dp"
            android:id="@+id/email_alt"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="Senha"
            android:layout_marginTop="10dp"
            android:id="@+id/senha_alt"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Alterar"
            android:id="@+id/alterar"/>

    </LinearLayout>

    </ScrollView>
</LinearLayout>
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainWS" >

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfil" />

        <EditText
            android:id="@+id/txtPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName" >

            <requestFocus />

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <EditText
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha" />

        <EditText
            android:id="@+id/txtSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textWebEmailAddress" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnInsertar"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/ins" />

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/act" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="Apagar" />

        <Button
            android:id="@+id/btnObtener"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/obt" />

        <Button
            android:id="@+id/btnListar"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/lis" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <ListView
        android:id="@+id/lstClientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
